Update ADR-004